--- a/index.html
+++ b/index.html
@@ -40,22 +40,26 @@
 
     <div class="container">
       <div class="card">
-        <div class="top-section">
-          <img src="Asset/Eswarsamy.jpg" alt="Rachel Smith" />
+        <div class="containers">
+          <div class="image">
+            <img src="Asset/Eswarsamy.jpg" alt="Profile Image" />
+          </div>
           <div class="info">
             <h1>Rachel Smith</h1>
-            <p>LAWYER & CONSULTANT</p>
-            <div class="contact-info">
-              <p><strong>Phone:</strong> 123-456-7890</p>
-              <p><strong>Email:</strong> info@mysite.com</p>
-              <p>
-                <strong>Address:</strong> 500 Terry Francine Street, San
-                Francisco, CA 94158
-              </p>
-              <p><strong>Date of Birth:</strong> March 14th, 1984</p>
-            </div>
+            <h2>LAWYER & CONSULTANT</h2>
+            <p><strong>Phone:</strong> <br />123-456-7890</p>
+            <p><strong>Email:</strong> <br />info@mysite.com</p>
+            <p>
+              <strong>Address:</strong> <br />500 Terry Francine Street, San
+              Francisco, CA 94158
+            </p>
+            <p>
+              <strong>Date of Birth:</strong><br />
+              March 14th, 1984
+            </p>
           </div>
         </div>
+
         <div class="social-icons">
           <a
             href="https://www.linkedin.com/in/eswarasamy-m-9b4113277?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BbyduFKFTRJGizRioMi5R8Q%3D%3D"
@@ -64,11 +68,13 @@
           <a href="https://www.facebook.com/profile.php?id=61556349569597"
             ><i class="fab fa-facebook"><img src="Asset/facebook.webp"</i>
           </a>
-          <a href="https://github.com/Eswarasamym"
-            ><i class="fab fa-twitter"><img src="Asset/Github.webp"</i></a
-          >
+
           <a href="https://www.instagram.com/_hashtag_eswar/"
             ><i class="fab fa-instagram"><img src="Asset/insta.webp"</i>
+
+            <a href="https://github.com/Eswarasamym"
+              ><i class="fab fa-Github"><img src="Asset/Github.webp" </i></a
+            >
           </a>
         </div>
       </div>
