--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div calss="num">
     <nav>
-      <div class="logo">ESWARASAMY M</div>
+      <div class="logo">ESWARASAMY</div>
       <input type="checkbox" id="click" />
       <label for="click" class="menu-btn">
         <i class="fas fa-bars"></i>
