--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <h1>ESWARASAMY M</h1>
           <h2>FULL STACK DEVEOPER</h2>
           <p><strong>Phone:<a href="tel:+917826991751"></strong> +91 7826991751</p></a>
-          <p><strong>Email:</strong> <a href="eswarasamy87@gmail.com"  > eswarasamy87@gmail.com</p></a>  
+          <p><strong>Email:</strong> <a href="https://mail.google.com/mail/"  > eswarasamy87@gmail.com</p></a>  
           <p><strong>Address:</strong> 1/368 kullakpalayam<br> Coimbatore, 642 002</p>
           <p><strong>Date of Birth:</strong> March 13th 2004</p>
       </div>
